# xfep-lookup

./: .gitignore  README.md  pyproject.toml
src/xfep/lookup/: __init__.py  base.py  dni.py  errors.py  models.py  ruc.py
src/xfep/lookup/providers/: __init__.py  apiinti.py  apisnet.py  padron.py
tests/: conftest.py  test_dni.py  test_providers.py  test_ruc.py
