[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xfep-lookup"
version = "0.1.0"
description = "RUC/DNI lookup con proveedores pluggables para Facturación Electrónica Perú"
requires-python = ">=3.13"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["src/xfep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
